[tool.poetry]
name = "pyiw"
version = "0.1.0"
description = "Manipulate wireless devices. Python wrapper for IW tool."
authors = ["Ivan Zatevakhin <ivan.zatevakhin(at)proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

